--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+   contents: read
+      
 jobs:
   build:
 
@@ -37,4 +40,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+         python -m pytest --verbose --junit-xml=junit.xml
+    - name: Publish Test Report
+         uses: mikepenz/action-junit-report@v3
+         if: success() || failure() # always run even if the previous step fails
+         with:
+             report_paths: '**/junit.xml'
+             detailed_summary: true
+             include_passed: true
